@@ -128,9 +128,7 @@ main (int argc, char *argv[])
    logview = LOGVIEW_WINDOW(logview_window_new ());
    prefs_connect (logview);
    logview_menus_set_state (logview);
-   gtk_widget_set_sensitive (logview->view, FALSE);
-   gtk_widget_set_sensitive (logview->loglist, FALSE);
-   gtk_widget_show (GTK_WIDGET(logview));
+   gtk_widget_show (GTK_WIDGET (logview));
 
    cursor = gdk_cursor_new (GDK_WATCH);
    gdk_window_set_cursor (GTK_WIDGET (logview)->window, cursor);
@@ -147,11 +145,15 @@ main (int argc, char *argv[])
    }
    restoration_complete = TRUE;
 
+   gtk_widget_show (logview->calendar);
+   gtk_widget_show (logview->loglist);
+   gtk_widget_show (logview->sidebar);
+   gtk_widget_show (logview->view);
+   gtk_widget_show (logview->hpaned);
+   gtk_widget_show (logview->statusbar);
+
    gdk_window_set_cursor (GTK_WIDGET (logview)->window, NULL);    
    gdk_display_flush (gtk_widget_get_display (GTK_WIDGET (logview)));
-
-   gtk_widget_set_sensitive (logview->view, TRUE);
-   gtk_widget_set_sensitive (logview->loglist, TRUE);
    
    gnome_client = gnome_master_client ();
 
